# gitle-sdl-lab

./: CMakeLists.txt  README.md  main.cpp
